@@ -48,7 +48,6 @@ Sources
    sources/git
    sources/bzr
    sources/patch
-   sources/pip
 
 
 .. _plugins_external:
